@@ -1,6 +1,11 @@
 2006-10-25  Wim Taymans  <wim@fluendo.com>
 
 	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc):
+	Add comment.
+
+2006-10-25  Wim Taymans  <wim@fluendo.com>
+
+	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc):
 	Don't mess with the component size, the parent does that for us.
 
 2006-10-25  Wim Taymans  <wim@fluendo.com>
